...tbds:  - add test for allNAs and kproto_gower
          - try to remember why has there been clprofiles and not plot.kproto so far? (...x argument for keep.data = F? ) 
          - check NA treatment (argument + remove of NAs, ln 133ff + are they ignored if na.rm=F?)
	        - update validation_kproto


clustMixType_0.3-9  2022-12-12  - fixes in kproto_gower (ln 224ff & 324ff) - merging of equal prototypes
                                - test number for validation_kproto reduced to decrease time for check on CRAN 
clustMixType_0.3-8  2022-12-10  - examples from validation_kproto changed to \dontrun{} as they are too slow for CRAN submission 
clustMixType_0.3-7  2022-12-09  - fixes according to win-builder: importFrom("stats", "median"), .Rd for na.rm and plot.kproto 
                                - NA treatment for kproto_gower (ln. 424): cluster membership NA if all varianbles are NA. Note kproto_gower does not allow for na.rm = "yes" data with removed missings are passed from kproto(). 
                                - validation_kproto (ln. 983)/kproto (ln.920): class(object) != "kproto") replaced by: !inherits(object, "kproto") 
clustMixType_0.3-6  2022-12-07  - internal imputation and one step imputation of doi = 10.1007/s00357-022-09422-y implemented
                                - changing the argument na.rm from logical to character
                                - backwards compatibility is given, since TRUE is changed to "yes" and FALSE to "no" automatically
                                - added some new tests in test_basic regarding the imputation
clustMixType_0.3-5  2022-12-06  - fixes in test_basics (prediction for only 1 obs) and validation_kproto (stop for gower). 
clustMixType_0.3-4  2022-12-04  - plot.kproto added (wrapper aorund clprofiles). 
clustMixType_0.3-3  2022-12-04  - predict.kproto extended to data frame with only one obs. (ln.495, suggestd by G.Terziysky).