@@ -1,6 +1,6 @@
 Package: clustMixType
 Version: 0.3-9
-Date: 2022-12-12
+Date: 2022-12-13
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
 Maintainer: Gero Szepannek <gero.szepannek@web.de>
